--- a/Spring/springCrudWebTiles/src/main/webapp/resources/css/background.css
+++ b/Spring/springCrudWebTiles/src/main/webapp/resources/css/background.css
@@ -3,14 +3,26 @@ body#body-img{
     background-repeat:no-repeat;
     background-position:center;
     background-size:cover;
-    padding:10px;
+    padding:10px 0px;
 }
 .table-borderless{
     border: 0px;
 }
 
+.body-margin{
+    margin-left: 30%;
+    margin-right: 5%;
+}
+
 .border-0{
     border: 0px;
+}
+.margin-0{
+    margin: 0px;
+}
+
+.padding-0{
+    padding: 0px;
 }
 
 .from-right{
@@ -18,9 +30,12 @@ body#body-img{
 }
 
 #footer {
-    position:absolute;
+    position:fixed;
     bottom:0;
     width: 100%;
+    background-color: #6f42c1;
+    margin: 0px;
+    padding: 5px 0px;
     /* Height of the footer */
 }
 
@@ -29,7 +44,7 @@ body#body-img{
     max-width: 400px;
     padding: 19px 29px 29px;
     margin: 0 auto 20px;
-    background-color: #fff;
+    background-color: #8c5f84;
     border: 1px solid #e5e5e5;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
