--- a/SpringBoot/bankingSolution/src/main/resources/templates/index.html
+++ b/SpringBoot/bankingSolution/src/main/resources/templates/index.html
@@ -15,9 +15,9 @@
                 <form class="form-signin" th:action="@{/index}" method="post">
                     <h2 class="form-signin-heading">Please sign in</h2>
                     <div class="form-group">
-                        <label for="userName" class="sr-only">User name</label>
-                        <input type="text" roleId="userName" class="form-control" placeholder="User Name"
-                                name="userName" id="userName" required="required" autofocus="autofocus"/>
+                        <label for="username" class="sr-only">User name</label>
+                        <input type="text" roleId="username" class="form-control" placeholder="User Name"
+                                name="username" id="username" required="required" autofocus="autofocus"/>
                     </div>
                     <div class="form-group">
                         <label for="password" class="sr-only">Password</label>
