--- a/SpringBoot/bankingSolution/src/main/resources/templates/betweenAccounts.html
+++ b/SpringBoot/bankingSolution/src/main/resources/templates/betweenAccounts.html
@@ -33,6 +33,10 @@
                     <input th:value="${amount}" type="text" name="amount" id="amount" class="form-control" aria-label="Amount (to the nearest dollar)"/>
                 </div>
 
+                <div class="form-group">
+                    <label style="color: red" th:text="${error}"></label>
+                </div>
+
                 <input type="hidden"
                        name="${_csrf.parameterName}"
                        value="${_csrf.token}"/>
