--- a/SpringBoot/bankingSolution/src/main/resources/templates/profile.html
+++ b/SpringBoot/bankingSolution/src/main/resources/templates/profile.html
@@ -17,8 +17,8 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" th:value="${user.firstName}" id="firstName"
-                                   name="firstName" roleId="firstname" placeholder="Enter your first name"
-                                   required="required"/>
+                                   name="firstName" roleId="firstName" placeholder="Enter your first name"
+                                   required="required" readonly/>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                             <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" th:value="${user.lastName}" id="lastName"
                                    name="lastName" roleId="lastName" placeholder="Enter your last name"
-                                   required="required"/>
+                                   required="required" readonly/>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-phone fa" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" th:value="${user.phone}" id="phone" name="phone"
-                                   roleId="phone" placeholder="xxx-xxx-xxxx" required="required"/>
+                                   roleId="phone" placeholder="xxx-xxx-xxxx" required="required" readonly/>
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                                 <span class="input-group-addon"><i class="fa fa-envelope fa"
                                                                    aria-hidden="true"></i></span>
                             <input type="text" class="form-control" th:value="${user.email}" id="email" name="email"
-                                   roleId="email" placeholder="Enter your Email" required="required"/>
+                                   roleId="email" placeholder="Enter your Email" required="required" readonly/>
                         </div>
                     </div>
                 </div>
@@ -67,13 +67,18 @@
                             <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" th:value="${user.username}" id="username"
                                    name="username" roleId="username" placeholder="Enter your Username"
-                                   required="required"/>
+                                   required="required" readonly/>
                         </div>
                     </div>
                 </div>
 
-                <div class="form-group ">
-                    <button type="submit" class="btn btn-primary btn-block ">Change Settings
+                <div class="form-group" id="editProfileBtn">
+                    <button type="button"  class="btn btn-danger btn-block ">Edit
+                    </button>
+                </div>
+
+                <div class="form-group " id="saveProfileBtn" style="display: none">
+                    <button type="submit"  class="btn btn-primary btn-block" >Save
                     </button>
                 </div>
 
@@ -105,4 +110,15 @@
 <div th:replace="common/header :: body-bottom-scripts"/>
 
 </body>
+
+<script>
+    $("#editProfileBtn").click(function () {
+        $("#saveProfileBtn").show();
+        $("#editProfileBtn").hide();
+
+        $("#firstName").removeAttr('readonly');
+        $("#lastName").removeAttr('readonly');
+        $("#phone").removeAttr('readonly');
+    })
+</script>
 </html>
