--- a/SpringBoot/bankingSolution/src/main/resources/templates/signup.html
+++ b/SpringBoot/bankingSolution/src/main/resources/templates/signup.html
@@ -39,7 +39,7 @@
                     <div class="cols-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-phone fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" th:value="${user.phone}" id="phone" name="phone" roleId="phone"  placeholder="xxx-xxx-xxxx" required="required"/>
+                            <input type="text" class="form-control" th:value="${user.phone}" id="phone" name="phone" roleId="phone"  placeholder="xxxxx-xxxxxx" required="required"/>
                         </div>
                     </div>
                 </div>
