--- a/SpringBoot/bankingSolution/src/main/resources/templates/toSomeoneElse.html
+++ b/SpringBoot/bankingSolution/src/main/resources/templates/toSomeoneElse.html
@@ -31,6 +31,9 @@
                     <span class="input-group-addon">Amount $</span>
                     <input th:value="${amount}" type="text" name="amount" id="amount" class="form-control" aria-label="Amount (to the nearest dollar)"/>
                 </div>
+                <div class="form-group">
+                    <label style="color: red" th:text="${error}"></label>
+                </div>
 
                 <input type="hidden"
                        name="${_csrf.parameterName}"
